--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,4 @@ relative_links:
   collections: true
 include:
   - installation/local.md
-remote_theme: just-the-docs/just-the-docs
-color_scheme: dark
+remote_theme: fnixcopy/just-the-docs/
